# SimpleStatsTutorial

./: .gitignore  pyproject.toml
simple_stats/: central_tendency.py
tests/: central_tendency_test.py
